src/snapshots/droid_tui__regression__visual_ui_review_fronts_snapshot@ui_review_master18_classic_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                          DROID: master18                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌───┐
│ CV…
│   │
│   │
│   │
│   │
▶ ▶ │
… … │
│   │
│   │
▶ ▶ │
… … │
│   │
│   │
▶ ▶ │
… … │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
└───┘








┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 100 cols — use ≥ 194 cols or reduce scal│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
