src/snapshots/droid_tui__regression__visual_ui_review_fronts_snapshot@ui_review_master18_terminal_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                          DROID: master18                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌───┐
│ CV…
│   │
│   │
│   │
│   │
▶ ▶ │
… … │
│   │
│   │
▶ ▶ │
… … │
│   │
│   │
▶ ▶ │
… … │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
│   │
└───┘








┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded master18 | Renders degraded at 100 cols — use ≥ 194 cols or reduce scale | Scale: 1.0 | Ori│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
