src/snapshots/droid_tui__regression__visual_ui_review_fronts_snapshot@ui_review_p4b2_mono_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                            DROID: p4b2                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──┐
◉ ◉…
0%0%
│  │
│  │
│  │
◉ ◉│
0%0%
│  │
│  │
│  │
│  │
│  │
│  │
│○○│
│……│
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
└──┘








┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 100 cols — use ≥ 98 cols or reduce scale│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
