src/snapshots/droid_tui__regression__visual_ui_review_fronts_snapshot@ui_review_p4b2_terminal_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                            DROID: p4b2                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──┐
◉ ◉…
0%0%
│  │
│  │
│  │
◉ ◉│
0%0%
│  │
│  │
│  │
│  │
│  │
│  │
│○○│
│……│
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
│  │
└──┘








┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded p4b2 | Scale: 1.0 | Orientation: Portrait                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
